--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "docs:json": "compodoc -p ./tsconfig.json -e json -d .",
     "storybook": "npm run docs:json && start-storybook -p 6006",
-    "build-storybook": "npm run docs:json && build-storybook -o docs-build"
+    "build-storybook": "npm run docs:json && build-storybook -o docs"
   },
   "private": true,
   "dependencies": {
